syntax = "proto3";

option csharp_namespace = "QueueService";

package greet;

message EmptyReply {
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

service QueueManager {
    rpc Queue (MessageRequest) returns (MessageReply);
}

message MessageRequest {
    string name = 1;
    int32 payload = 2;
}

message MessageReply {
}

service Mongo {
    rpc AddData(MongoAddRequest) returns (EmptyReply);
}

message MongoAddRequest {
    string collectionName = 1;
    string data = 2;
}
